Edited JavaScript functions
Displays search results, results layout styled, updates information and
player.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 			<hr class="leftbreak">
 			<div id="searchBar">
-				<input id="search" type="search" size="20" value="Search Music"/>
+				<input id="search" type="search" size="20" value="Lady Gaga"/>
 				<select id="searchType">
 					<option value="&q=" selected="selected">all</option>
 					<option value="&q_track=">track</option>
@@ -35,6 +35,7 @@
 			</div>
 			<hr width="85%" color="#252525">
 			<div id="results" class="scrollbar">
+				<!--
 				<div class="result">
 					<img class="resultAlbum" src="images/album.png" alt="album art" width="60px" height="60px">
 					<div class="resultInfo">
@@ -43,110 +44,7 @@
 						<p>artist</p>
 					</div>
 				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
-				<div class="result">
-					<img class="resultAlbum" src="images/album.png" alt="album art" width="80px" height="80px">
-					<div class="resultInfo">
-						<p>title</p>
-						<p>album</p>
-						<p>artist</p>
-					</div>
-				</div>
+				-->
 			</div>
 		</aside>
 		<aside id="rightPanel">
@@ -157,24 +55,20 @@
 			<div id="trackInfo">
 				<div class="infoBlock">
 					<span class="rightsub">title</span>
-					<p>HelloWorld</p>
+					<p id="infoTitle">HelloWorld</p>
 				</div>
 				<div class="infoBlock">
 					<span class="rightsub">artist</span>
-					<p>MUSIXSPOTIFY</p>
+					<p id="infoArtist">MUSIXSPOTIFY</p>
 				</div>
 				<div class="infoBlock">
 					<span class="rightsub">album</span>
-					<p>Chrome</p>
-				</div>
-				<div class="infoBlock">
-					<span class="rightsub">release</span>
-					<p>Jan 1, 2000</p>
+					<p id="infoAlbum">Chrome</p>
 				</div>
 			</div>
 			<hr id="albumbreak" class="rightbreak">
 			<img id="albumArt" src="images/album.png" alt="album art" width="250px" height="250px">
 		</aside>
-		<iframe id="player" src="https://embed.spotify.com/?uri=spotify:track:4bz7uB4edifWKJXSDxwHcs" frameborder="0" allowtransparency="true"></iframe>
+		<iframe id="player" src="https://embed.spotify.com/?uri=spotify:track:5iIeIeH3LBSMK92cMIXrVD" frameborder="0" allowtransparency="true"></iframe>
 	</body>
 </html>
