--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<hr class="leftbreak">
 			<div id="searchBar">
-				<input id="search" type="search" size="20" value="Lady Gaga"/>
+				<input id="search" type="search" size="20" value="Lady Gaga" x-webkit-speech/>
 				<select id="searchType">
 					<option value="&q=" selected="selected">all</option>
 					<option value="&q_track=">track</option>
