--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
 		<title>MUSIXSPOTIFY</title>
 		<!-- Link Style Sheets -->
 		<link rel="stylesheet" href="styles/main.css" type="text/css"/>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400,700' rel='stylesheet' type='text/css'>
 		<!-- Import jQuery -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src=""></script>
 		<!-- Import JavaScript -->
 		<script src="scripts/ajax.js"></script>
 	</head>
 	<body id="body">
 		<header>
 			<h1><span id="title_MUSIX">MUSIX</span><span id="title_SPOTIFY">SPOTIFY</span></h1>
+			<nav>
+				<a href="index.html">Home</a>
+				<a href="document.html">Document</a>
+				<a href="https://github.com/exocodez/musixspotify">Source</a>
+			</nav>
 		</header>
 		<div id="main"></div>
 		<aside id="leftPanel">
